# hnf1b-db

./: .env.backup  .env.docker.example  .env.docker.template  .env.example  .env.phenopackets  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  ONTOLOGY_SERVICE.md  PHENOPACKETS_DATA_MAPPING.md  PHENOPACKETS_MIGRATION_GUIDE.md  PROJECT_STATUS.md  README.md  TODO.md  docker-compose.dev.yml  docker-compose.npm.yml  docker-compose.services.yml  docker-compose.yml  lint.sh  migrate_from_sheets.py  phenopackets-complete-replacement.md  phenopackets-refactor.md  phenotype_sample.json  pyproject.toml  refactor.md  requirements-dev.txt  requirements.txt  test_cnv_parser.py  test_ontology_service.py  test_phenopackets.py
backend/: .dockerignore  .env.example  .flake8  Dockerfile  Dockerfile.prod  Makefile  README.md  alembic.ini  config.yaml  conftest.py  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_cursor_manually.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_phenopackets_v2_schema.py  002_add_jsonb_path_indexes.py  003_add_variant_search_indexes.py  004_merge_heads.py  0bd1567a483c_add_phenotype_metadata_to_hpo_lookup.py  131bded2e26e_create_users_table.py  20260412_0001_add_state_columns_to_phenopackets.py  20260412_0002_add_phenopacket_revisions_table.py  20260412_0003_seed_state_and_revisions.py  20260412_0004_rebuild_mvs_with_state_filter.py  20260415_0005_add_refresh_sessions.py  2e28b299e3b6_remove_molecule_context_vocabulary.py  30848634d515_add_deleted_at_for_soft_delete.py  32105e02cd4b_add_credential_tokens_table.py  44ccb14dc32b_fix_mv_summary_statistics_unique_index.py  483990d7e28f_add_comment_mentions_table.py  48c7a668d614_fix_feature_disease_aggregation_indexes.py  531a38c865bd_add_comments_table.py  533c020aa76d_add_publication_index.py  5f9c34e4e444_add_global_search_indexes.py  62362ff6f580_add_reference_genome_tables_for_genes_.py  6a1b2c3d4e5f_add_variants_to_global_search.py  72e990f17d42_add_cursor_pagination_index_on_.py  7b2a3c4d5e6f_add_variant_annotations_table.py  7ddc07dd9e1c_fk_audit_actor_columns.py  88b3a0c19a89_add_phenopacket_controlled_vocabularies.py  8baf0de6a441_add_fulltext_search_to_phenopackets.py  8c3d4e5f6g7h_update_variant_id_constraint_for_cnvs.py  8d988c04336a_add_publication_metadata_table.py  93b3e6984a6c_fix_hpo_lookup_table_repopulation.py  9d4e5f6g7h8i_add_5part_cnv_format.py  a1b2c3d4e5f6_enhance_search_vectors.py  a7f1c2d9e5b3_fetched_at_to_timestamptz.py  add_features_count_generated_column.py  add_materialized_views_for_aggregations.py  b1e70338f190_populate_curated_hpo_terms_for_hnf1b.py  b7c1f0a9d2e4_search_mv_resolvable_ids.py  c22e647d6cff_add_index_for_external_references_jsonb_.py  c8d2a3f1e0b5_fix_pou_specific_domain_boundary.py  c9a55365ed1f_fix_credential_tokens_purpose_check_.py  (+10 more)
backend/app/: config.py  constants.py  database.py  hpo_proxy.py  main.py  variant_validator_endpoint.py
backend/app/api/: admin_endpoints.py  auth_endpoints.py  dev_endpoints.py  version.py
backend/app/auth/: __init__.py  credential_tokens.py  dependencies.py  email.py  password.py  permissions.py  rate_limit.py  session_cookies.py  tokens.py  user_import_service.py
backend/app/comments/: models.py  routers.py  schemas.py  service.py
backend/app/core/: __init__.py  cache.py  config.py  retry.py  (+7 more)
backend/archive/: auth_endpoints.py
backend/examples/: phenopackets_with_ontology.py
backend/migration/: direct_sheets_to_phenopackets.py
backend/scripts/: __init__.py  add_grch37_assembly.py  backfill_publications.py  create_admin_user.py  dump_openapi.py  enrich_phenopackets_with_vep.py  entrypoint_helpers.py  import_chr17q12_genes.py  import_hnf1b_reference_data.py  normalize_hpo_labels.py  seed_dev_users.py  sync_publication_metadata.py  sync_reference_data.py  sync_variant_annotations.py  verify_sheets_structure.py
backend/tests/: README.md  conftest.py  test_admin_password_required.py  test_admin_route_authorization.py  test_admin_sync_endpoints.py  test_admin_task_state.py  test_aggregations_common.py  test_aggregations_endpoints.py  test_aggregations_mv_paths.py  test_alembic_env_autogenerate.py  test_api_transitions.py  test_audit_actor_fk.py  test_audit_entry_error_handling.py  test_audit_logging.py  test_audit_utils.py  test_auth.py  test_auth_bopla_schemas.py  test_auth_csrf.py  test_auth_email_verify.py  test_auth_invite.py  test_auth_password.py  test_auth_password_change.py  test_auth_password_reset.py  test_auth_rate_limits_wave5c.py  test_auth_refresh_sessions.py  test_auth_tokens.py  test_auth_transaction_boundaries.py  test_auth_unlock_endpoint.py  test_auth_user_management_endpoints.py  test_batch_endpoints.py  test_batch_performance.py  test_cache_contract.py  test_classification_validation.py  test_cnv_annotation.py  test_cnv_parser.py  test_comments_ast_immutable.py  test_comments_c5_check_constraints.py  test_comments_c6_terminal_writes.py  test_comments_mentions_replace.py  test_comments_permissions.py  (+97 more)
mcp/: .gitignore  Dockerfile  Dockerfile.prod  Makefile  README.md  pyproject.toml
mcp/contract/: openapi.snapshot.json
mcp/scripts/: gen_contract.py
mcp/tests/: __init__.py  e2e_transcript.md  test_allowlist.py  test_allowlist_enforcement.py  test_api_client.py  test_capabilities.py  test_citation.py  test_compare.py  test_config.py  test_contract.py  test_dataclass.py  test_error_envelope.py  test_errors.py  test_individuals.py  test_live_individuals.py  test_live_publication_passages.py  test_live_publications.py  test_live_terms.py  test_live_variants.py  test_publications.py  test_ratelimit.py  test_reference.py  test_register_all.py  test_safe_tool.py  test_search_service.py  test_server.py  test_shaping.py  test_smoke.py  test_smoke_import.py  test_statistics.py  test_terms.py  test_tool_capabilities.py  test_tool_enums.py  test_tool_individuals.py  test_tool_publication_passages.py  test_tool_publications.py  test_tool_reference.py  test_tool_search.py  test_tool_statistics.py  test_tool_terms.py  (+2 more)
(+935 files in other folders)
