[project]
name = "hnf1b-api"
version = "0.1.0"
description = "FastAPI-based REST API for managing clinical and genetic data for individuals with HNF1B disease"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "motor>=3.7.1",
    "pandas>=2.3.2",
    "passlib>=1.7.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[dependency-groups]
dev = [
    "black==23.12.1",
    "flake8==7.0.0",
    "flake8-docstrings==1.7.0",
    "isort==5.13.2",
    "mypy==1.8.0",
]
test = [
    "pytest==7.4.4",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true  
disallow_untyped_defs = false
no_implicit_optional = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["motor.*", "pandas.*", "passlib.*"]
ignore_missing_imports = true
