[project]
name = "hnf1b-api"
version = "0.1.0"
description = "FastAPI-based REST API for managing clinical and genetic data for individuals with HNF1B disease"
requires-python = ">=3.10"
dependencies = [
    # Core FastAPI dependencies
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "pandas>=2.3.2",
    "passlib>=1.7.4",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
    
    # PostgreSQL and database dependencies
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    
    # Scientific dependencies (for sheets import)
    "biopython>=1.84",
    "requests>=2.31.0",
]


[dependency-groups]
dev = [
    "ruff==0.6.8",
    "mypy==1.8.0",
]
test = [
    "pytest==7.4.4",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true  
disallow_untyped_defs = false
no_implicit_optional = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["pandas.*", "passlib.*", "biopython.*", "Bio.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
# Configuration compatible with black formatting

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
