[project]
name = "hnf1b-api"
version = "0.1.0"
description = "FastAPI-based REST API for managing clinical and genetic data for individuals with HNF1B disease"
requires-python = ">=3.10"
dependencies = [
    # Core FastAPI dependencies
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "pandas>=2.3.2",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<5.0.0",  # Pin to <5.0.0 for passlib 1.7.4 compatibility (passlib unmaintained, incompatible with bcrypt 5.x)
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
    # PostgreSQL and database dependencies
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    # Scientific dependencies (for sheets import)
    "biopython>=1.84",
    "requests>=2.31.0",
    # Phenopackets and ontology dependencies
    "phenopackets>=2.0.0", # GA4GH Phenopackets schema
    "protobuf>=4.25.0", # For phenopackets serialization
    "jsonschema>=4.20.0", # For phenopacket validation
    "pronto>=2.5.0", # For parsing OBO ontologies (HPO, MONDO)
    "jsonpath-ng>=1.6.0", # For complex JSON queries
    "httpx>=0.28.1",
    "aiohttp>=3.13.1",
]


[dependency-groups]
dev = [
    "ruff==0.6.8",
    "mypy==1.8.0",
    "types-jsonschema>=4.25.1.20250822",
]
test = [
    "ga4gh-vrs>=2.1.3",
    "pytest==7.4.4",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "tqdm>=4.67.1",
    "types-tqdm>=4.66.0",  # Type stubs for tqdm
]
migration = [
    "tqdm>=4.66.0",  # Progress bars for migration
    "rich>=13.7.0",  # Rich console output
    "deepdiff>=6.7.0",  # For comparing data structures
]
phenopackets = [
    "ga4gh.vrs>=2.0.0",  # Variation Representation Specification
    "oaklib>=0.5.0",  # Ontology Access Kit (optional)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
warn_unused_ignores = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["pandas.*", "passlib.*", "biopython.*", "Bio.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ga4gh.*", "bioutils.*"]
ignore_missing_imports = true
# NOTE: ga4gh.vrs and bioutils libraries do not include type annotations (no py.typed marker)
# and have no published type stubs on PyPI (verified 2025-01-06).
# These libraries are tested and functional; suppressing tool limitation only.
# TODO: Remove when upstream adds py.typed marker or type stubs become available.

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Alembic migration files: revision identifiers are required by Alembic framework
# These variables are read via introspection, not direct import
"alembic/versions/*.py" = ["F841", "E501", "D415"]  # Unused variable, long SQL queries, docstring format
"alembic/env.py" = ["E501"]  # Long comments explaining model imports
# Migration files: allow long SQL queries, data strings, and complex expressions
"migration/**/*.py" = ["E501"]
# Test files: allow long test strings and fixtures
"tests/*.py" = ["E501"]
# App files with SQL/JSONPath queries and long API parameters
"app/phenopackets/clinical_endpoints.py" = ["E501"]  # JSONPath queries
"app/phenopackets/clinical_queries.py" = ["E501"]  # JSONPath and SQL queries
"app/phenopackets/endpoints.py" = ["E501", "D417"]  # SQL queries and API param descriptions
"app/phenopackets/validation/variant_validator.py" = ["E501"]  # Long regex patterns
"app/phenopackets/variant_search_validation.py" = ["E501"]  # Long comments
"app/publications/endpoints.py" = ["E501", "D106"]  # Long strings and nested Config class
"app/services/ontology_service.py" = ["D107", "D205"]  # __init__ docstrings and formatting
"app/schemas.py" = ["D101"]  # Simple schema classes don't need docstrings
"examples/**/*.py" = ["E501"]  # Example scripts with long print statements

[tool.ruff.lint.isort]
# Configuration compatible with black formatting

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
