[project]
name = "hnf1b-mcp"
version = "0.1.0"
description = "Read-only MCP server exposing HNF1B-db public data to LLMs"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.3.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5.0",
]

[project.scripts]
hnf1b-mcp = "hnf1b_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hnf1b_mcp"]

[dependency-groups]
dev = [
    "ruff==0.15.12",
    "mypy==2.0.0",
    "pytest==9.0.3",
    "pytest-asyncio>=1.2.0",
    "pytest-cov==7.1.0",
    "respx>=0.21",
    "mcp>=1.2",
]

[tool.ruff]
target-version = "py311"
line-length = 88
[tool.ruff.lint]
select = ["E", "W", "F", "I", "D"]
[tool.ruff.lint.pydocstyle]
convention = "google"
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D103", "D100", "D104", "E501"]

[tool.mypy]
python_version = "3.11"
strict = true
[[tool.mypy.overrides]]
module = ["fastmcp.*", "mcp.*", "respx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 80
